[workspace]
members = [
    "src/expr",
    "src/pgcopy",
    "src/pgrepr",
    "src/pgrepr-consts",
    "src/ore",
    "src/lowertest",
]
# Use Cargo's new feature resolver, which can handle target-specific features.
# Explicit opt-in is required even with the 2021 edition because we use a
# virtual workspace.
# See: https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#cargos-new-feature-resolver
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.68.2"

[profile.dev]
# TODO(gusywnn|benesch): remove this when incremental ice's are improved
incremental = false

[profile.dev.package]
# Compile the backtrace crate and its dependencies with all optimizations, even
# in dev builds, since otherwise backtraces can take 20s+ to symbolize. With
# optimizations enabled, symbolizing a backtrace takes less than 1s.
addr2line = { opt-level = 3 }
adler = { opt-level = 3 }
backtrace = { opt-level = 3 }
gimli = { opt-level = 3 }
miniz_oxide = { opt-level = 3 }
object = { opt-level = 3 }
rustc-demangle = { opt-level = 3 }

[profile.release]
# Emit only the line info tables, not full debug info, in release builds, to
# substantially reduce the size of the debug info. Line info tables are enough
# to correctly symbolicate a backtrace, but do not produce an ideal interactive
# debugger experience. This seems to be the right tradeoff for release builds:
# it's unlikely we're going to get interactive access to a debugger in
# production installations, but we still want useful crash reports.
debug = 1

# Use this section only to change the source of dependencies that appear as
# transitive dependencies of other external dependencies in the dependency
# graph. For everything else (e.g. rust-postgres, rdkafka,
# differential-dataflow, proptest, timely), use a `git` source directly in each
# Cargo.toml.
#
# The reasons for each of these overrides are listed in deny.toml.
[patch.crates-io]
chrono = { git = "https://github.com/chronotope/chrono.git", branch = "0.4.x" }
hashbrown = { git = "https://github.com/MaterializeInc/hashbrown.git" }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres" }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
vte = { git = "https://github.com/alacritty/vte" }
